--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mind Reader</title>
+    <script src="js/main.js" async></script>
+    <!-- do I need this async in my js link -->
+    <!-- also, to easily comment, just press command key and / -->
+    <!-- add bootstrap styles and JS here -->
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+</head>
+<body>
+    <!-- div with container class to hold the whole -->
+    <div>
+      <h1>Mind Reader</h1>
+    </div>
+  <div class="container-sm border p-3 my-3">
+
+        <h1 id ="header-text"></h1>
+        <p id="p-text"></p> 
+    <div class="row text-center">
+    <div class="btn-group">
+        <button type="button" class="btn p-3" id="previous">Previous</button>
+        <button type="button" class="btn p-3" id="next">Next<i class='fas fa-undo'></i></button>
+    </div> 
+  </div>
+</div>
+ 
+
+    <!-- for the buttons, this code centers them in middle:
+    
+    <div class="row justify-content-center">
+    <div class="col-4">
+      One of two columns
+    </div>-->
+    
+
+
+</body>
+</html>
