--- a/index.html
+++ b/index.html
@@ -7,40 +7,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mind Reader</title>
-    <script src="js/main.js" async></script>
-    <!-- do I need this async in my js link -->
-    <!-- also, to easily comment, just press command key and / -->
-    <!-- add bootstrap styles and JS here -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+        <link href="style.css" type="stylesheet"></link>
 </head>
-<body>
-    <!-- div with container class to hold the whole -->
-    <div>
-      <h1>Mind Reader</h1>
-    </div>
-  <div class="container-sm border p-3 my-3">
 
-        <h1 id ="header-text"></h1>
-        <p id="p-text"></p> 
-    <div class="row text-center">
-    <div class="btn-group">
-        <button type="button" class="btn p-3" id="previous">Previous</button>
-        <button type="button" class="btn p-3" id="next">Next<i class='fas fa-undo'></i></button>
-    </div> 
-  </div>
-</div>
- 
+<body class="container bg-dark">
+    <div class="container justify-content-center rounded-circle">
+        <div class="row justify-content-center">
+            <div class="col-md-4 col-sm-12 justify-content-center">
+                <div class="card w-100 justify-content-center min">
+                    <div class="bodyText justify-content-center align-self-center">
+                        <div class="row justify-content-center align-self-center">
+                            <p class="bodyText justify-content-center align-self-center" id="mainText"></p>
+                        </div>
+                        <div class="justify-content-center align-self-center">
+                            <div class="bodyText overflow-scroll justify-content-center align-self-center" style="max-height :400px;" id="instructions"></div>
+                        </div>
+                        <div class="overflow-auto justify-content-center align-self-center" id="symbScroll">
+                        </div>
+                        <div class="row">
+                            <div class="col justify-content-end">
+                                <button class="back-btn align-self-start btn btn-dark rounded-circle" id="back-btn">Back</button>
+                            </div>
+                            <div class="col-auto justify-content-end align-self-end">
+                                <button class="next-btn justify-content-end align-self-end btn btn-dark rounded-circle" id="next-btn">Next</button>
+                            </div>
+                        </div>
+                        <div class="card justify-content-center">
+                            <button class="go-btn btn btn-dark rounded-circle" id="go-btn">Go</button>
+                        </div>
+                        <div class="card align-self-end rounded-circle">
+                            <button class="return-btn justify-content-center btn btn-dark rounded-circle" id="return-btn">Return</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <!-- for the buttons, this code centers them in middle:
-    
-    <div class="row justify-content-center">
-    <div class="col-4">
-      One of two columns
-    </div>-->
-    
-
-
+        <script src="./main.js"></script>
 </body>
+
 </html>
