--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="container bg-dark">
-    <div class="container justify-content-center rounded-circle">
+    <div class="container justify-content-center">
         <div class="row justify-content-center">
             <div class="col-md-4 col-sm-12 justify-content-center">
                 <div class="card w-100 justify-content-center min">
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <script src="./main.js"></script>
+        <script src="main.js"></script>
 </body>
 
 </html>
