--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container justify-content-center">
         <div class="row justify-content-center">
             <div class="col-md-4 col-sm-12 justify-content-center">
-                <div class="card w-100 justify-content-center min">
+                <div class="card w-100 h-100 justify-content-center">
                     <div class="bodyText justify-content-center align-self-center">
                         <div class="row justify-content-center align-self-center">
                             <p class="bodyText justify-content-center align-self-center" id="mainText"></p>
