--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="style.css" type="stylesheet"></link>
 </head>
 
-<body class="container bg-dark">
+<body class="bg-dark">
     <div class="container justify-content-center">
         <div class="row justify-content-center">
             <div class="col-md-4 col-sm-12 justify-content-center">
