--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="bg-dark">
-    <div class="container justify-content-center">
+    <div class="container auto-spc justify-content-center">
         <div class="row justify-content-center">
             <div class="col-md-4 col-sm-12 justify-content-center">
                 <div class="card w-100 h-100 justify-content-center">
